--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.1.0")
+    testCompile("org.junit.jupiter:junit-jupiter-params:5.4.2")
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.16.1'
 
 }
